--- a/AuthSystem/Views/Shared/_LoginPartial.cshtml
+++ b/AuthSystem/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
             @if (SignInManager.IsSignedIn(User))
             {
                 <li class="nav-item">
@@ -24,31 +24,13 @@
                         <a class="nav-link" asp-area="Identity" asp-page="/Admin/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+                        <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Losdsdsgout</a>
                     </li>
-                    <!-- Uncomment this section for a dropdown menu
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Admin
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/AdminUserCreation">AdminCreate</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Admin/Index">CRUD</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Admin/AdminDashboard">Dashboard</a>
-                        </div>
-                    </li>
-                    -->
                 }
                 else
                 {
                     <li class="nav-item">
-                        <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+                        <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logousssst</a>
                     </li>
                 }
             }
