--- a/AuthSystem/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,7 +11,7 @@
 
     <title>@ViewData["Title"] - ChatterBox</title>
 </head>
-<body>s
+<body>
     <div class="container">
         <div class="left"></div>
         <div class="right">
