--- a/AuthSystem/Areas/Identity/Pages/Admin/Delete.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Delete.cshtml
@@ -1,14 +1,21 @@
 ﻿@page
 @model DeleteModel
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<!-- Load Bootstrap's JavaScript bundle -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+
 <link rel="stylesheet" href="~/css/Admin/adminDelete.css"> <!-- Link to your custom CSS file -->
 
 <div class="container">
     <div class="text-left">
-        <h2 class="mt-5 heading">Delete User</h2>
+        <h2 class="heading">Delete User</h2>
 
         <div class="form-container">
-            <form method="post" class="mt-3">
+            <form method="post">
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control input-small" readonly />
@@ -21,7 +28,3 @@
         <a asp-page="Index" class="mt-3 d-block back-to-list">Back to List</a>
     </div>
 </div>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-
-
