--- a/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Admin/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
 @model IndexModel
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="~/css/Admin/adminDash.css" />
 
 <div style="padding-left: 20px; padding-bottom:15px;">
     <h2 style="margin-left:15px;">User Management</h2>
 
-    <div class="header-controls" style="display: flex; justify-content: space-between; align-items: center; margin-right:10px">
-        <form method="get" style="margin: 0; flex-grow: 1;">
-            <div class="input-group search-bar" style=" margin-right: 200px;" width="200px">
+    <div class="header-controls">
+        <form method="get" class="search-form">
+            <div class="input-group search-bar">
                 <input type="text" class="form-control" name="CurrentFilter" placeholder="Search by Email" value="@Model.CurrentFilter">
                 <div class="input-group-append">
                     <button type="submit" class="btn btn-outline-secondary">
@@ -19,6 +19,7 @@
                 </div>
             </div>
         </form>
+        <div class="btn-users">
         <a class="btn-add-user" asp-area="Identity" asp-page="ActiveUsers">
             Inactive Users
         </a>
@@ -28,6 +29,7 @@
         <a class="btn-add-user" asp-area="Identity" asp-page="/AdminUserCreation">
             <i class="fas fa-plus-circle"></i> Add User
         </a>
+        </div>
     </div>
 </div>
 
@@ -77,11 +79,13 @@
                         }
                     </td>
                     <td>
+                        <div class="btn-actions">
                         @if (!user.Roles.Contains("Admin"))
                         {
                             <a asp-page="Edit" asp-route-id="@user.Id"><i class="fas fa-edit"></i></a>
                             <a asp-page="Delete" asp-route-id="@user.Id"><i class="fas fa-trash-alt"></i></a>
                         }
+                        </div>
                     </td>
                 </tr>
             }
