--- a/AuthSystem/Areas/Identity/Pages/AdminUserCreation.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/AdminUserCreation.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
 }
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="~/css/Admin/adminCreate.css">
 
@@ -30,4 +31,6 @@
         <button type="submit" class="save-btn">Register User</button>
     </form>
 </div>
+<a asp-area="Identity" asp-page="Admin/Index" class="mt-3 d-block back-to-list">Back to List</a>
+
 
