--- a/AuthSystem/wwwroot/css/Admin/adminEdit.css
+++ b/AuthSystem/wwwroot/css/Admin/adminEdit.css
@@ -20,24 +20,23 @@
     align-items: center;
     justify-content: flex-start;
     padding-top: 80px;
-    width: 100%;
+    width: 500px;
     box-sizing: border-box;
 }
 
 .heading {
     text-align: center;
-    margin-bottom: 20px;
 }
 
 .form-container {
-    width: 500px;
-    max-width: 900px;
+    width: 100%;
+    max-width: 500px;
     padding: 30px;
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #f9f9f9;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .form-group {
@@ -74,4 +73,27 @@
     text-align: center;
     margin-top: 10px;
     color: cadetblue;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .form-container {
+        width: 98%;
+        padding: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    .form-container {
+        width: 300px;
+        padding: 15px;
+    }
+
+    .heading {
+        font-size: 24px;
+    }
+
+    .save-btn {
+        font-size: 14px;
+    }
 }
