--- a/AuthSystem/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center mt-5 mb-5">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 p-4 border rounded shadow-sm bg-light ms-sm-3 ms-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
