--- a/AuthSystem/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -4,11 +4,18 @@
     ViewData["Title"] = "Reset password";
 }
 
+<style>
+    body{
+        margin-left:20px;
+    }
+</style>
+
 <h1>@ViewData["Title"]</h1>
 <h2>Reset your password.</h2>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<body>
+<div class="row justify-content-center mt-5 mb-5">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4 p-4 border rounded shadow-sm bg-light ms-sm-3 ms-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <input asp-for="Input.Code" type="hidden" />
@@ -31,6 +38,7 @@
         </form>
     </div>
 </div>
+</body>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
